# UltimateMotorcycleSimulator

./: .gitignore  CMakeLists.desktop.txt  CMakeLists.txt  README.md  gradle.properties  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/collision/: WorldCollision.cpp  WorldCollision.h
src/debug/: BuildCheck.h  DebugReport.cpp  DebugReport.h  ErrorLogger.cpp  ErrorLogger.h  RuntimeGuard.cpp  RuntimeGuard.h
src/engine/: Camera.cpp  Camera.h  GameEngine.cpp  GameEngine.h  GameStateManager.cpp  GameStateManager.h  InputManager.cpp  InputManager.h
src/input/: TouchControls.cpp  TouchControls.h
src/motorcycle/: Chassis.cpp  Chassis.h  EngineSim.cpp  EngineSim.h  Motorcycle.cpp  Motorcycle.h  Rider.cpp  Rider.h  Tire.cpp  Tire.h  Transmission.cpp  Transmission.h
src/renderer/: HUD.cpp  HUD.h  Renderer.cpp  Renderer.h
src/world/: DayNightCycle.cpp  DayNightCycle.h  RoadNetwork.cpp  RoadNetwork.h  Surface.cpp  Surface.h  Terrain.cpp  Terrain.h  TrafficVehicle.cpp  TrafficVehicle.h  WeatherController.cpp  WeatherController.h  World.cpp  World.h  WorldChunk.cpp  WorldChunk.h
